fix alignment between about section and header text

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -13,19 +13,19 @@ header {
     width: 100%;
     position: sticky;
     top: 0;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 0 10px 0;
     display: flex;
     justify-content: space-between;
     margin-bottom: 0;
 }
 
 .nav-container {
-    width: 90%;
-    max-width: 1200px;
+    width: 100%;
+    max-width: 1210px;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
 .nav-menu {
@@ -60,7 +60,7 @@ h1 {
 @media(max-width:1000px) {
 .nav-container {
     width: 100%;
-    justify-content:space-between;
+    justify-content: space-between;
 
     }
 }
